--- a/components/Root/Web.scss
+++ b/components/Root/Web.scss
@@ -21,6 +21,7 @@
 
 .frontend {
     background-image: url('/assets/web/images/background.jpg');
+    background-color: black;
 }
 .frontend.st800 {
     background-image: none;
@@ -56,11 +57,35 @@
     font-weight: bold;
 }
 #page #outerHeader #header #logo {
-    background-image: url("/assets/web/images/login-logo.png");
+    /*background-image: url("/assets/web/images/login-logo.png");*/
     background-repeat: no-repeat;
+    background-color: #085AC0;
     width: 125px;
     height: 125px;
+    font-family: Helvetica, Arial;
+    text-align: center;
+    font-size: 33px;
+
+    .domain {
+        padding-top: 23px;
+        color: white;
+        font-weight: bolder;
+    }
+    .tld {
+        color: white;
+        font-weight: lighter;
+        line-height: 20px;
+    }
 }
+/*#page #outerHeader #header #logo .domain {
+    color: white;
+    font-weight: bolder;
+}
+#page #outerHeader #header #logo .domain {
+    color: white;
+    font-weight: lighter;
+}*/
+
 
 #page #outerHeader #header #logo.gt350 {
     float: left;
