--- a/components/Menu/Sub/Component.css
+++ b/components/Menu/Sub/Component.css
@@ -1,18 +1,23 @@
-.cssClass.st480 .menu {
-    display: none;
-}
-.cssClass.st480 {
+.cssClass {
     height: 0px;
 }
-.cssClass {
-    height: 62px;
+.cssClass .menu {
+    display: none;
 }
+
+.cssClass.gt550 {
+    height: 30px;
+}
+.cssClass.gt550 .menu {
+    display: block;
+}
+
 .cssClass ul li { margin-bottom: 0px; margin-left: 0px; float: left; width: 50%;}
 .cssClass ul li a {
     background-color: #4C97CC;
     display: block;
-    height: 62px;
-    line-height: 62px;
+    height: 30px;
+    line-height: 30px;
     font-weight: bold;
     text-align: center;
     vertical-align: middle;
