--- a/components/Login/Component.css
+++ b/components/Login/Component.css
@@ -2,8 +2,22 @@
     width: 100%;
 }
 
-#page #outerHeader #header #logo.loginLogo {
+.frontend.login #page #outerHeader #header .leftRegion {
+    width: auto;
+    float: none;
+}
+.frontend.login #page #outerHeader #header .leftRegion #logo {
     margin: auto;
     margin-top: 15px;
     float: none;
+    width: 123px;
+    height: 123px;
+    font-size: 33px;
+}
+
+.frontend.login #page #outerHeader #header .leftRegion #logo .domain {
+    padding-top: 26px;
+}
+.frontend.login #page #outerHeader #header .leftRegion #logo .tld {
+    line-height: 20px;
 }
