Abstand unter redner

--- a/components/Directories/Congregations/Detail/Component.scss
+++ b/components/Directories/Congregations/Detail/Component.scss
@@ -21,6 +21,10 @@
     margin-top: 5px;
 }
 
+.cssClass .speakers-list .speakers .speaker {
+    margin-bottom: 20px;
+}
+
 .cssClass .coordinator .name,
 .cssClass .talk-organiser .name,
 .cssClass .speakers-list .speakers .speaker .name {
