--- a/components/Search/Talk/ViewPage/SearchForm/Component.css
+++ b/components/Search/Talk/ViewPage/SearchForm/Component.css
@@ -1,3 +1,8 @@
+.cssClass.kwcForm {
+    display: table;
+    margin: auto;
+}
+
 .cssClass.kwcForm .kwcForm .submitWrapper .button {
     background-color: #085AC0;
     background-image: none;
