--- a/components/Search/Talk/ViewPage/Component.css
+++ b/components/Search/Talk/ViewPage/Component.css
@@ -2,6 +2,26 @@
     padding: 20px;
 }
 
+.cssClass ul li {
+    min-height: 100px;
+    padding-left: 5px;
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.cssClass.gt350 ul li {
+    width: 49%;
+    float: left;
+}
+
+.cssClass ul li .switchContent {
+    position: absolute;
+    top: 90px;
+    background-color: wheat;
+    box-shadow: 1px 1px 1px black;
+    padding: 5px;
+}
+
 .cssClass ul li.speaker {
     list-style-type: none;
 }
@@ -18,11 +38,6 @@
 
 .cssClass ul li.speaker .congregation {
     clear: left;
-}
-
-.cssClass ul li.speaker table.talks {
-    padding: 5px;
-    display: none;
 }
 
 .cssClass ul li.speaker table.talks tr td {
