--- a/components/Root/Web.scss
+++ b/components/Root/Web.scss
@@ -1,6 +1,6 @@
 @import "kwf/css3/border-radius";
 
-.webStandard { font-family: Helvetica, Arial, Verdana, Geneva, sans-serif; font-size: 13px; color: var(typo); }
+.webStandard { font-family: sans-serif; font-size: 13px; color: var(typo); }
 .webStandard strong { font-weight: bold; }
 .webStandard em { font-style: italic; }
 
@@ -17,6 +17,28 @@
 .webStandard ol,
 .webStandard ul { margin-bottom: 10px; margin-left: 20px; }
 .webStandard li { list-style-type: square; margin-bottom: 5px; line-height: 18px; color: var(typo); }
+
+.menues {
+    box-shadow: 0px 2px 1px #f2f2f2;
+    margin-bottom: 2px;
+    z-index: 10;
+    /* hack to bring menu to single layer to disable continous redraw */
+    backface-visibility: hidden;
+}
+.scrolled {
+    .menues {
+        -webkit-transition: box-shadow 0.5s; /* For Safari 3.1 to 6.0 */
+        transition: box-shadow 0.5s;
+        box-shadow: 0px 3px 3px #888;
+        position: fixed;
+        top: 0px;
+    }
+    #outerContent {
+        padding-top: 43px;
+    }
+}
+
+
 
 
 html {
@@ -98,10 +120,6 @@ html {
     .tld {
         line-height: 8px;
     }
-}
-
-#page #outerHeader #header .menues {
-    margin-left: 123px;
 }
 
 body.ext-ie6 { text-align: center; }
