MaterialDesign Menu jetzt auch fuer groesser

--- a/components/Menu/Main/Component.scss
+++ b/components/Menu/Main/Component.scss
@@ -1,7 +1,10 @@
 .cssClass {
     overflow: hidden;
     height: 0px;
+    -webkit-transition: all 1s; /* For Safari 3.1 to 6.0 */
+    transition: all 1s;
     ul.menu {
+        position: relative;
         > li {
             border-top-color: #186ad0;
             border-top-style: solid;
@@ -30,6 +33,67 @@
                         padding-bottom: 15px;
                     }
                 }
+            }
+        }
+    }
+}
+.gt400 .cssClass {
+    height: 40px;
+    ul.menu {
+        display: table;
+        width: 100%;
+        > li {
+            display: table-cell;
+            border-left-color: #186ad0;
+            border-left-style: solid;
+            border-left-width: 2px;
+            a, p {
+                border-bottom-color: #186ad0;
+                border-bottom-style: solid;
+                border-bottom-width: 2px;
+                padding-left: 10px;
+                padding-right: 0px;
+            }
+            &.first {
+                border-left: none;
+            }
+            &.hover {
+                background-color: #186ad0;
+            }
+            ul.subMenu {
+                display: none;
+                table-layout: fixed;
+                position: absolute;
+                left: 0px;
+                width: 100%;
+                > li {
+                    display: table-cell;
+                    width: 2%;
+                    text-align: center;
+                    border-left-color: #186ad0;
+                    border-left-style: solid;
+                    border-left-width: 2px;
+                    a {
+                        padding-left: 0px;
+                        padding-right: 0px;
+                    }
+                    &.first {
+                        border-left: none;
+                    }
+                }
+            }
+        }
+    }
+}
+.gt800 .cssClass {
+    ul.menu {
+        table-layout: fixed;
+        > li {
+            width: 2%;
+            text-align: center;
+            a {
+                padding-left: 0px;
+                padding-right: 0px;
             }
         }
     }
