--- a/components/Title/Component.scss
+++ b/components/Title/Component.scss
@@ -25,4 +25,9 @@
             padding-left: 10px;
         }
     }
+    &.gt400 {
+        .handle {
+            display: none;
+        }
+    }
 }
