--- a/components/Root/Web.scss
+++ b/components/Root/Web.scss
@@ -36,14 +36,16 @@
     #outerContent {
         padding-top: 43px;
     }
+    &.frontend .pageWrapper.gt1000 .menues {
+        width: 80%;
+    }
 }
 
 
 
 
-html {
-    background-image: url('/assets/web/images/background.jpg');
-    background-color: black;
+html body.frontend {
+    background-color: #dedede;
 }
 
 .frontend .pageWrapper.gt1000 {
@@ -65,10 +67,10 @@ html {
 .frontend .pageWrapper.gt1000 #page {
     width: 80%;
     margin: auto;
-    padding: 10px;
     background-color: #fff;
-    @include border-radius-pie(3px);
     overflow: hidden;
+    box-shadow: 0px 3px 3px #888;
+    padding-bottom: 20px;
 }
 
 #page #outerHeader #header .leftRegion {
