Styling such-formular

--- a/components/Search/Talk/ViewPage/SearchForm/Component.scss
+++ b/components/Search/Talk/ViewPage/SearchForm/Component.scss
@@ -3,9 +3,14 @@
     margin: auto;
 }
 
-.cssClass.kwcForm .kwcForm .submitWrapper .button {
-    background-color: #085AC0;
-    background-image: none;
-    height: 30px;
-    line-height: 30px;
+.cssClass.kwcForm .kwcForm .submitWrapper {
+    margin: auto;
+    display: table;
+    padding-top: 10px;
+    .button {
+        background-color: #085AC0;
+        background-image: none;
+        height: 30px;
+        line-height: 30px;
+    }
 }
