--- a/components/Search/Talk/ViewPage/SearchForm/Component.scss
+++ b/components/Search/Talk/ViewPage/SearchForm/Component.scss
@@ -1,16 +1,21 @@
 .cssClass.kwcForm {
     display: table;
     margin: auto;
-}
-
-.cssClass.kwcForm .kwcForm .submitWrapper {
-    margin: auto;
-    display: table;
-    padding-top: 10px;
-    .button {
-        background-color: #085AC0;
-        background-image: none;
-        height: 30px;
-        line-height: 30px;
+    .kwcForm .submitWrapper {
+        margin: auto;
+        display: table;
+        padding-top: 10px;
+        .button {
+            background-color: #085AC0;
+            background-image: none;
+            height: 30px;
+            line-height: 30px;
+        }
+    }
+    &.gt500 {
+        width: 365px;
+        .kwfFormFieldTextField input {
+            width: 217px;
+        }
     }
 }
