--- a/components/Root/Web.scss
+++ b/components/Root/Web.scss
@@ -18,6 +18,10 @@
 .webStandard ul { margin-bottom: 10px; margin-left: 20px; }
 .webStandard li { list-style-type: square; margin-bottom: 5px; line-height: 18px; color: var(typo); }
 
+.webForm .submitWrapper .button {
+    margin-top: 5px;
+}
+
 .menues {
     box-shadow: 0px 2px 1px #f2f2f2;
     margin-bottom: 2px;
