--- a/components/Title/Component.scss
+++ b/components/Title/Component.scss
@@ -8,6 +8,7 @@
         font-weight: bold;
     }
     .mobileTitle {
+        position: relative;
         padding: 5px;
         font-size: 20px;
         .logo, .title {
@@ -18,6 +19,20 @@
             color: #fff;
             font-weight: bold;
             padding-left: 10px;
+        }
+        .logout {
+            height: 100%;
+            display: block;
+            width: 40px;
+            top: 0;
+            right: 0;
+            position: absolute;
+            background-color: #D01818;
+            .icon {
+                display: table;
+                margin: auto;
+                margin-top: 7px;
+            }
         }
     }
 }
