--- a/components/Directories/Congregations/Detail/Component.scss
+++ b/components/Directories/Congregations/Detail/Component.scss
@@ -90,6 +90,11 @@
     margin-top: 20px;
 }
 
+.cssClass .speakers-list .speakers .speaker .name {
+    font-weight: bold;
+    font-size: 15px;
+}
+
 .cssClass .speakers-list .speakers .speaker .talks {
     padding: 5px;
 }
