Styling und mehr information anzeigen

--- a/components/Directories/Congregations/Detail/Component.scss
+++ b/components/Directories/Congregations/Detail/Component.scss
@@ -13,6 +13,10 @@
     }
 }
 
+.cssClass .circle {
+    margin-bottom: 5px;
+}
+
 .cssClass .coordinator,
 .cssClass .talk-organiser {
     width: 50%;
