--- a/components/Search/Speakers/Detail/Component.scss
+++ b/components/Search/Speakers/Detail/Component.scss
@@ -6,6 +6,7 @@
     &:hover {
         box-shadow: 0px 3px 3px #888;
     }
+
     .name {
         float: left;
         margin-right: 3px;
@@ -16,6 +17,11 @@
     }
     .congregation {
         clear: left;
+        .circle:after {
+            content: "\00BB";
+            margin-left: 2px;
+            margin-right: 2px;
+        }
     }
     table.talks tr td {
         vertical-align: top;
