--- a/components/Directories/CircleGroups/Detail/Component.scss
+++ b/components/Directories/CircleGroups/Detail/Component.scss
@@ -1,5 +1,6 @@
 .cssClass {
     background-color: #eee;
+    position: relative;
 
     h2 {
         padding-left: 5px;
@@ -12,5 +13,11 @@
             list-style: none;
             margin: 0px;
         }
+    }
+
+    > .downloadPdf {
+        position: absolute;
+        top: 5px;
+        right: 15px;
     }
 }
