--- a/components/Directories/Congregations/Detail/Component.scss
+++ b/components/Directories/Congregations/Detail/Component.scss
@@ -24,8 +24,10 @@
         }
     }
 
-    .coordinator {
+    .note {
         clear: both;
+        font-style: italic;
+        padding-top: 5px;
     }
 
     .coordinator, .talk-organiser {
