--- a/components/Search/Speakers/Detail/Component.scss
+++ b/components/Search/Speakers/Detail/Component.scss
@@ -3,6 +3,7 @@
     transition: all 0.5s;
     background-color: #eee;
     padding: 5px;
+    min-height: 100px;
     &:hover {
         box-shadow: 0px 3px 3px #888;
     }
