--- a/components/Root/Web.scss
+++ b/components/Root/Web.scss
@@ -22,6 +22,10 @@
     margin-top: 5px;
 }
 
+#gmapLoader {
+    background-color: #005d92;
+}
+
 .menues {
     box-shadow: 0px 2px 1px #f2f2f2;
     margin-bottom: 2px;
