Lastname immer uppercase

--- a/components/Directories/Congregations/Detail/Component.scss
+++ b/components/Directories/Congregations/Detail/Component.scss
@@ -39,6 +39,9 @@
             float: left;
         }
     }
+    .lastname {
+        text-transform: uppercase;
+    }
 }
 
 .cssClass.st480 .coordinator,
