Fix styling probleme, login wird schon mal angezeigt.

--- a/components/Login/Component.scss
+++ b/components/Login/Component.scss
@@ -1,3 +1,8 @@
+@import "kwc-susy/master-layout-helper";
+@import "config/colors";
+
+@include set-master-layout(default);
+
 .kwcClass {
     width: 100%;
 }
