--- a/components/Root/Web.scss
+++ b/components/Root/Web.scss
@@ -2,6 +2,11 @@
 @import "config/colors";
 @import "kwf/css3/border-radius";
 
+body {
+    margin: 0;
+    padding: 0;
+}
+
 .kwfUp-webStandard { font-family: sans-serif; font-size: 14px; color: $typo; }
 .kwfUp-webStandard strong { font-weight: bold; }
 .kwfUp-webStandard em { font-style: italic; }
