--- a/components/Root/Web.scss
+++ b/components/Root/Web.scss
@@ -150,7 +150,7 @@ body.ext2-ie6 { text-align: center; }
     padding-bottom: 20px;
 }
 
-#page #outerFooter #footer { padding: 15px; height: 20px; position: relative; }
+#page #outerFooter #footer { padding: 15px; position: relative; }
 
 .kwfUp-webListNone ul { margin: 0px; }
 .kwfUp-webListNone,
