--- a/components/Search/Speakers/View/SearchForm/Component.scss
+++ b/components/Search/Speakers/View/SearchForm/Component.scss
@@ -15,15 +15,7 @@
         }
     }
 
-    .kwcForm .submitWrapper {
-        margin: auto;
-        display: table;
-        padding-top: 10px;
-        .button {
-            background-color: #085AC0;
-            background-image: none;
-            height: 30px;
-            line-height: 30px;
-        }
+    .submitWrapper {
+        display: none;
     }
 }
