--- a/components/Menu/Main/Component.scss
+++ b/components/Menu/Main/Component.scss
@@ -9,6 +9,7 @@
     -webkit-transition: all 1s; /* For Safari 3.1 to 6.0 */
     transition: all 1s;
     ul.menu {
+        padding: 0px;
         position: relative;
         > li {
             border-top-color: #186ad0;
